# funhou

./: README.md  claude-terminal-window.html  index.html  package-lock.json  package.json  tab.html  vite.config.ts
public/: audio-processor.js
src/: App.css  App.tsx  claude-terminal-main.tsx  index.css  main.tsx  tab.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_logs.rs  main.rs  paste_to_app.rs  pty.rs
src-tauri/src/autohide/: config.rs  manager.rs  mod.rs  window_controller.rs
src-tauri/src/speech/: config.rs  manager.rs  mod.rs  recognizer.rs
src/components/: ClaudeLaunchDialog.tsx  ClaudeLogImporter.tsx  ClaudeSessionLinkDialog.tsx  ClaudeTerminal.tsx  ClaudeTerminalDialog.tsx  ClaudeTerminalDock.tsx  ClaudeTerminalWidget.tsx  ClaudeTerminalWindow.tsx  CompletedTasksSidebar.tsx  CurrentActivitySection.tsx  CustomInput.test.tsx  CustomInput.tsx  CwdSelector.tsx  CwdSelectorDialog.tsx  DailySummarySidebar.tsx  DateNavigation.tsx  DeleteConfirmDialogs.tsx  EntryCard.tsx  FilterBar.tsx  GeminiLiveDialog.tsx  GeminiSaveDialog.tsx  GeminiToolbar.tsx  IncompleteTasksSidebar.tsx  InputSection.tsx  MarkdownPreview.tsx  Pagination.tsx  PinnedSidebar.tsx  RepliesPreviewDialog.tsx  ReplyCard.tsx  SearchInput.tsx  SettingsDialog.tsx  SettingsSidebar.tsx  SortableDoingItem.tsx  SortableIncompleteItem.tsx  TagBadge.tsx  TagFilter.tsx  TagSelector.tsx  TaskClaudeLaunchDialog.tsx  TaskClaudeSessionsDialog.tsx  TaskManagementPage.tsx  (+4 more)
src/contexts/: ClaudeTerminalSessionContext.tsx
src/hooks/: useClaudeLogs.ts  useClaudeTerminal.ts  useCompletedTodos.ts  useDatabase.ts  (+18 more)
(+29 files in other folders)
