[package]
name = "funhou"
version = "0.1.0"
description = "分報を簡単に記録できるツール"
authors = ["FScoward"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2.1.0", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
font-kit = "0.14"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
