[package]
name = "funhou"
version = "0.1.0"
description = "分報を簡単に記録できるツール"
authors = ["FScoward"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2.1.0", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
font-kit = "0.14"
dirs = "5"
chrono = "0.4"

# PTY (pseudo-terminal) support for interactive terminal
tauri-plugin-pty = "0.1"

# Dialog plugin for folder picker
tauri-plugin-dialog = "2"

# Autohide feature dependencies
core-graphics = "0.23"
core-foundation = "0.9"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }

# Speech recognition dependencies
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-speech = "0.3"
objc2-avf-audio = "0.3"
block2 = "0.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
